Add a workflow to run Zookeeper test pipeline (#45)
* add run tests workflow

* update helm-charts-release-config.yaml

* run tests

* rebase main

* run tests

* update versions

* update release-config

* update versions

* update versions

* update test pipeline branch

--- a/.github/helm-charts-release-config.yaml
+++ b/.github/helm-charts-release-config.yaml
@@ -1,5 +1,10 @@
 ---
 
+# Charts release configuration file example
+# This file is used to update the version of the helm charts and images in the values.yaml file
+# It is used in the helm-charts-release action
+# ${release} is replaced with the release version provided in the workflow
+
 charts:
   - name: qubership-zookeeper
     chart_file: charts/helm/zookeeper-service/Chart.yaml
